fix h2 spacing and size issues

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -2,9 +2,9 @@ h1,
 .h1,
 .font-h1 {
   font-family: 'FKGroteskNeue', Arial, sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.2;
-  margin-bottom: 1.5rem;
+  // margin-bottom: 1.5rem;
   word-break: break-word;
 
   @media (min-width: $breakpoint-desktop) {
@@ -16,9 +16,9 @@ h2,
 .h2,
 .font-h2 {
   font-family: 'FKGroteskNeue', Arial, sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.2;
-  margin-bottom: 1.5rem;
+  // margin-bottom: 1.5rem;
   word-break: break-word;
 
   @media (min-width: $breakpoint-desktop) {
